Apply OpenRewrite migration to Java 25