@@ -109,7 +109,7 @@ public abstract class ZoneRespawn extends ZoneType
 		{
 			return _spawnLocs.get(Rnd.get(_spawnLocs.size()));
 		}
-		return _spawnLocs.get(0);
+		return _spawnLocs.getFirst();
 	}
 
 	public final Location getOtherSpawnLoc()
@@ -120,7 +120,7 @@ public abstract class ZoneRespawn extends ZoneType
 			{
 				return _otherSpawnLocs.get(Rnd.get(_otherSpawnLocs.size()));
 			}
-			return _otherSpawnLocs.get(0);
+			return _otherSpawnLocs.getFirst();
 		}
 		return getSpawnLoc();
 	}
@@ -133,7 +133,7 @@ public abstract class ZoneRespawn extends ZoneType
 			{
 				return _chaoticSpawnLocs.get(Rnd.get(_chaoticSpawnLocs.size()));
 			}
-			return _chaoticSpawnLocs.get(0);
+			return _chaoticSpawnLocs.getFirst();
 		}
 		return getSpawnLoc();
 	}
@@ -146,7 +146,7 @@ public abstract class ZoneRespawn extends ZoneType
 			{
 				return _banishSpawnLocs.get(Rnd.get(_banishSpawnLocs.size()));
 			}
-			return _banishSpawnLocs.get(0);
+			return _banishSpawnLocs.getFirst();
 		}
 		return getSpawnLoc();
 	}
